[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=3]
radius = 13.0
height = 24.0

[sub_resource type="RayShape2D" id=2]
custom_solver_bias = 0.014
length = 16.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 186.54, 196.314 )
script = ExtResource( 1 )

[node name="Pivot" type="Node2D" parent="."]

[node name="icon" type="Sprite" parent="Pivot"]
position = Vector2( 0, -30 )
scale = Vector2( 0.42, 0.9 )
texture = ExtResource( 2 )

[node name="Capsule" type="CollisionShape2D" parent="."]
position = Vector2( 0, -34 )
shape = SubResource( 3 )

[node name="Floor" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 2 )

[node name="RayStep" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 32, 0 )

[node name="FloorL" type="RayCast2D" parent="."]
position = Vector2( -10, 0 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="FloorR" type="RayCast2D" parent="."]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="RayHead" type="RayCast2D" parent="."]
position = Vector2( 0, -60 )
enabled = true
cast_to = Vector2( 32, 0 )

[node name="RayStep2" type="RayCast2D" parent="."]
position = Vector2( 0, -24 )
enabled = true
cast_to = Vector2( 32, 0 )
